fix technical debt, coverage, code smell, security