@@ -28,15 +28,18 @@ import java.lang.reflect.Field;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
+import lombok.AccessLevel;
+import lombok.NoArgsConstructor;
 
 /**
  * GetAllFieldNamesSnippet.
  */
+@NoArgsConstructor(access = AccessLevel.PRIVATE)
 public class GetAllFieldNamesSnippet {
 
   /**
-   * Print all declared field names of the class or the interface the class extends.
+   * Print all declared field names of the class or the interface the class
+   * extends.
    *
    * @param clazz Tested class
    * @return list of names of all fields
@@ -49,7 +52,7 @@ public class GetAllFieldNamesSnippet {
           Arrays.stream(currentClazz.getDeclaredFields())
               .filter(field -> !field.isSynthetic())
               .map(Field::getName)
-              .collect(Collectors.toList()));
+              .toList());
       currentClazz = currentClazz.getSuperclass();
     }
     return fields;
