@@ -27,15 +27,18 @@ package cls;
 import java.lang.reflect.Field;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
+import lombok.AccessLevel;
+import lombok.NoArgsConstructor;
 
 /**
  * GetAllPublicFieldNamesSnippet.
  */
+@NoArgsConstructor(access = AccessLevel.PRIVATE)
 public class GetAllPublicFieldNamesSnippet {
 
   /**
-   * Print all declared public field names of the class or the interface the class extends.
+   * Print all declared public field names of the class or the interface the class
+   * extends.
    *
    * @param clazz Tested class
    * @return list of name of public fields
@@ -43,6 +46,6 @@ public class GetAllPublicFieldNamesSnippet {
   public static List<String> getAllPublicFieldNames(final Class<?> clazz) {
     return Arrays.stream(clazz.getFields())
         .map(Field::getName)
-        .collect(Collectors.toList());
+        .toList();
   }
 }
